# Hoshi

./: .gitignore  LICENSE  README.md  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js
.github/workflows/: release.yml
src/: boards.css  bridge.js  index.html  renderer.js  style.css  themes.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
